syntax = "proto2";
option java_multiple_files = true;

package aca.proto;

message BankMessage {

    oneof msg {
        Registration registration = 2;
        Login login = 3;
        Failure failure = 4;
        Confirmation confirmation = 5;
    }

    message Registration {
        required string firstName = 1;
        required string lastName = 2;
        required string username = 3;
        required string email = 4;
        required string password = 5;
    }

    message Login {
        required string username = 1;
        required string password = 2;
    }

    message Failure {
        optional string message = 1;
    }

    message Confirmation {
        optional string message = 1;
    }
}